refactor: melhorando classes de test para service e controller